--- a/scripts/infer_config.yaml
+++ b/scripts/infer_config.yaml
@@ -2,25 +2,25 @@
 # of crop and weed dataset
 
 #'0,1,2,3'
-gpus_to_use: '0'
+gpus_to_use: '3'
 DPI: 300
 LOG_WANDB:  False
 
-project_name: 'UDA_BEAN'
+project_name: 'UDA_Malaria'
 #'#'bean_aug_advent_carbonnier_new_data'
-experiment_name: 'bean_aug_advent_carbonnier_nd8_sgd_P03'
+experiment_name: 'Same_losvaz_slowDisc4_mfda7_400x'
 
-log_directory: "/home/user01/data/talha/bean_uda/logs/"
-checkpoint_path: "/home/user01/data/talha/bean_uda/chkpts/"
+log_directory: "/home/user01/data/talha/CMED/logs/"
+checkpoint_path: "/home/user01/data/talha/CMED/chkpts/"
 use_ocr: True
 
 # Data loader parameters
 
-src_data_dir: "/home/user01/data/talha/bean_uda/datasets/src_trg/"
-trg_data_dir: "/home/user01/data/talha/bean_uda/datasets/farms/c/"
+src_data_dir: "/home/user01/data/talha/CMED/dataset/HCM/400x/"
+trg_data_dir: "/home/user01/data/talha/CMED/dataset/LCM/400x/"
 
 # add sub dirs inside of train/val and test
-sub_directories: ['images/images/', 'masks/masks/']
+sub_directories: ['images/', 'labels/']
 Normalize_data: True
 Shuffle_data: True
 
