--- a/scripts/infer_config.yaml
+++ b/scripts/infer_config.yaml
@@ -10,7 +10,7 @@ sanity_check: True
 use_model: 'proposed'
 project_name: 'UDA_Malaria'
 #'#'bean_aug_advent_carbonnier_new_data'
-experiment_name: 'MaxViT_OCR_pretrain_aug_adv_slowDisc_400x'
+experiment_name: 'Same_losvaz_slowDisc2_mfda5_400x'
 
 log_directory: "/home/user01/data/talha/CMED/logs/"
 checkpoint_path: "/home/user01/data/talha/CMED/chkpts/"
@@ -18,7 +18,7 @@ predictions_dir: "/home/user01/data/talha/CMED/preds/"
 use_ocr: True
 
 # the model is trained on HCM and tested on LCM, so trg machine in actually the test data.
-trg_machine: 'HCM'
+trg_machine: 'LCM'
 # select magnification for testing 
 meg: '400x'
 split: 'test'
