--- a/scripts/config.yaml
+++ b/scripts/config.yaml
@@ -2,14 +2,14 @@
 # of crop and weed dataset
 
 #'0,1,2,3'
-gpus_to_use: '3'
+gpus_to_use: '2'
 DPI: 300
-LOG_WANDB:  True
+LOG_WANDB:  False
 sanity_check: False
 
 project_name: 'UDA_Malaria'
 #'#'bean_aug_advent_carbonnier_new_data'
-experiment_name: 'Same_losvazAllT_slowDisc2_mfda5_1000x'
+experiment_name: 'MaxViT_OCR_pretrain_aug_adv_slowDisc_Augv2_CELVF_1000x'
 
 log_directory: "/home/user01/data/talha/CMED/logs/"
 checkpoint_path: "/home/user01/data/talha/CMED/chkpts/"
@@ -39,7 +39,7 @@ input_channels: 3
 label_smoothing: 0.0
 batch_size: 4
 WEIGHT_DECAY: 0.00005
-AUX_LOSS_Weights: 0.49
+AUX_LOSS_Weights: 0.4
 LAMBDA_ADV_MAIN: 0.001
 LAMBDA_ADV_AUX: 0.0002
 # only for training data
@@ -49,11 +49,11 @@ Augment_data: True
 step_epoch:    [0]
 #, 10, 15, 20, 25, 30]
 
-geometric_aug: [0.3]
+geometric_aug: [0.25]
 #, 0.1, 0.2, 0.4, 0.3, 0.3]
-noise_aug:     [0.3]
+noise_aug:  [0.5]
 #, 0.1, 0.2, 0.2, 0.2, 0.2]
-prob_fda: 0.5
+prob_fda: 0.6
 L: 0.01
 space: 'ycrcb'
 # Regularization SD 0.5 LS 1e-2
@@ -66,8 +66,8 @@ learning_rate: 0.001
 learning_rate_d: 0.00001
 lr_schedule: 'cos'
 lr_schedule_d: 'poly'
-epochs: 200 
-warmup_epochs: 1
+epochs: 400 
+warmup_epochs: 2
 # one of 'batch_norm' or 'sync_bn' or 'layer_norm'
 norm_typ: 'sync_bn'
 BN_MOM: 0.9
