--- a/scripts/infer_config.yaml
+++ b/scripts/infer_config.yaml
@@ -2,7 +2,7 @@
 # of crop and weed dataset
 
 #'0,1,2,3'
-gpus_to_use: '0'
+gpus_to_use: '2'
 DPI: 300
 LOG_WANDB:  False
 sanity_check: False
@@ -10,7 +10,7 @@ sanity_check: False
 use_model: 'proposed'
 project_name: 'UDA_Malaria'
 #'#'bean_aug_advent_carbonnier_new_data'
-experiment_name: 'Same_losvaz_slowDisc2_mfda5_400x'
+experiment_name: 'MaxViT_OCR_pretrain_aug_adv_slowDisc_1000x'
 
 log_directory: "/home/user01/data/talha/CMED/logs/"
 checkpoint_path: "/home/user01/data/talha/CMED/chkpts/"
@@ -20,7 +20,7 @@ use_ocr: True
 # the model is trained on HCM and tested on LCM, so trg machine in actually the test data.
 trg_machine: 'LCM'
 # select magnification for testing 
-meg: '400x'
+# meg: '400x'
 split: 'test'
 iou_threshold: 0.5
 # Data loader parameters
